# StaDy4D

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
data_generation/: README.md  camera_trajectory_generators.py  data_generate_carla.py  requirements_download.txt
data_generation/configs/: config_large_scale-long.json  config_large_scale-mid.json  config_large_scale-short.json  config_test.json
dataviewer/: index.html  script.js  styles.css
docs/: index.html  script.js  show.html  styles.css
script/: _sam3_toy_eval_one_scene.py  aggregate_baselines.py  aggregate_sam3_vs_baselines.py  aggregate_sam3_vs_gsam.py  analyze_dataset.py  analyze_results.py  augment_cache_with_depthdiff.py  augment_cache_with_oracle_v2.py  benchmark_student_fps.py  build_dyn_eval_oracle.py  build_dyn_eval_oracle_v2.py  capture_carla_bev.py  check_dataset.py  collect_dynamic_training_data.py  collect_lora_train_data.py  collect_tum_train_data.py  compare_against_baseline.py  compare_fill_vs_sdxl.py  compare_keyframe_vs_gsam.py  compare_methods_batch.py  compare_sam3_vs_gsam.py  debug_nc.py  diagnose_acc.py  diagnose_online.py  draw_pipeline.py  draw_pipeline_current.py  eval_ablation_cut3r.py  eval_ablation_da3.py  eval_ablation_easi3r.py  eval_ablation_loger.py  eval_ablation_mapany.py  eval_ablation_monst3r.py  eval_ablation_pi3.py  eval_ablation_vggt.py  eval_ablation_vggt4d.py  eval_batch.py  eval_mask_aware_depth.py  eval_realworld.py  export_reconstruction_video.py  export_world_glb.py  (+40 more)
sigma/: __init__.py  main.py
sigma/data/: __init__.py  (+3 more)
(+94 files in other folders)
